tests/neg/param-lambda.stk
import stk.IO.stdout

param indent: Int

def line(text: String): Unit =
  var i = 0
  while i < indent do
    printChar ' '
    i = i + 1
  println text

def makeLinePrinter(): String => Unit =
  (text) => line text

def main =
  val f = makeLinePrinter allow stdout // error
  f "hello, world!"
